force-app/main/default/objects/Guest_Event__c/Guest_Event__c.object-meta.xml
<CustomObject>
    <description>This custom object records each activity within the resort where a customer&apos;s room key is used at a location. It captures the date, time, location, and type of activity, providing insights into guest movements and preferences within the resort. Useful for personalized guest experiences, security, and operational analysis.</description>
    <label>Guest Event</label>
    <nameField>
        <displayFormat>GE-{00000000}</displayFormat>
        <label>Guest Event Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Guest Events</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>