force-app/main/default/objects/Guest_Event__c/fields/Activity_Type__c.field-meta.xml
<CustomField>
    <fullName>Activity_Type__c</fullName>
    <description>Activity Type identifies the specific service or facility utilized by the guest, such as Spa, Golf, or Restaurant, enabling targeted insights into guest preferences and resort operations.</description>
    <label>Activity Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Beach Access</fullName>
            </value>
            <value>
                <fullName>Concierge Service</fullName>
            </value>
            <value>
                <fullName>Event Attendance</fullName>
            </value>
            <value>
                <fullName>Fitness Center</fullName>
            </value>
            <value>
                <fullName>Golf</fullName>
            </value>
            <value>
                <fullName>Guest Check-in</fullName>
            </value>
            <value>
                <fullName>Guest Check-out</fullName>
            </value>
            <value>
                <fullName>Housekeeping</fullName>
            </value>
            <value>
                <fullName>Pool</fullName>
            </value>
            <value>
                <fullName>Reception</fullName>
            </value>
            <value>
                <fullName>Restaurant</fullName>
            </value>
            <value>
                <fullName>Room Service</fullName>
            </value>
            <value>
                <fullName>Shopping</fullName>
            </value>
            <value>
                <fullName>Spa</fullName>
            </value>
            <value>
                <fullName>Experience</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>