force-app/main/default/objects/Guest_Event__c/fields/Details__c.field-meta.xml
<CustomField>
    <fullName>Details__c</fullName>
    <description>The location, event, or type of activity that the Contact has checked in to.</description>
    <label>Details</label>
    <type>TextArea</type>
</CustomField>