force-app/main/default/objects/Guest_Event__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <description>Location specifies the exact place within the resort where the activity occurred, such as &apos;Main Pool&apos; or &apos;Ocean View Restaurant&apos;, enhancing data accuracy for guest activity tracking and operational analysis.</description>
    <label>Location</label>
    <type>TextArea</type>
</CustomField>