force-app/main/default/objects/Guest_Event__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Activity_Type__c</columns>
    <columns>Details__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>